Fixed: Minasona container was added to every user even when they had no Palsona to display. Decreased spacing of Minasona container.

--- a/extension/src/style.css
+++ b/extension/src/style.css
@@ -8,8 +8,8 @@
   display: inline-flex;
   align-items: center;
   vertical-align: middle;
-  margin-right: 2px;
-  margin-left: 2px;
+  margin-right: 1px;
+  margin-left: 1px;
   gap: 1px;
 }
 
